<resources>
    <string name="app_name">PersonalSchedule_xml</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule">일정</string>
    <string name="memo">메모</string>
    <string name="write">작성</string>
    <string name="noti">알림</string>
    <string name="settings">설정</string>
    <string name="title">제목</string>
    <string name="save">저장</string>
    <string name="more">더보기</string>

    <string name="alarm_condition_start">시작</string>
    <string name="alarm_condition_ten_minutes_before">10분 전</string>
    <string name="alarm_condition_one_hour_before">1시간 전</string>
</resources>